fix/ large headlines hides behind page cut

--- a/src/styles/cut.css
+++ b/src/styles/cut.css
@@ -1,6 +1,6 @@
 .page-cut-wrap {
   width: 100%;
-  margin-top: 2%;
+  margin-top: 3%;
   display: flex;
   justify-content: center;
   align-items: center;
